<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Nou Usuari"
            android:textSize="24sp" />

        <!-- Campo de Email -->
        <EditText
            android:id="@+id/name_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/md_theme_surfaceVariant"
            android:hint="Nom usuari"
            android:padding="12dp"
            />

        <!-- Campo de Email -->
        <EditText
            android:id="@+id/email_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@color/md_theme_surfaceVariant"
            android:hint="Email"
            android:padding="12dp" />

        <!-- Campo de Contraseña -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/md_theme_surfaceVariant"
            android:hint="Contrasenya"
            android:inputType="textPassword"
            android:padding="12dp" />

        <!-- Campo de Contraseña -->
        <EditText
            android:id="@+id/password_check"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/md_theme_surfaceVariant"
            android:hint="Comprova la contrasenya"
            android:inputType="textPassword"
            android:padding="12dp" />

        <!-- Botón de Iniciar Sesión -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:text="Registrar-se"
            app:cornerRadius="5dp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>